src/test/deca/codegen/valid/homemade/test/test_complet_operateur_moins.deca
{
    int x = 10;
    int y = 5;

    println("x - y = ",(x - y));
}
