src/test/deca/codegen/invalid/homemade/test/test_complet_reaffectation_float_int.deca
{
    float x = 3.5;
    int y;
    y = x;
    println("y = ",(y));
}